--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark bg-blue primary-color scrolling-navbar" [containerInside]="true">
+<!--The content below is only a placeholder and can be replaced.  scrolling-navbar, fixed-top  -->
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark bg-blue primary-color" [containerInside]="true">
   <logo>
       <a class="logo navbar-brand" href="#"><strong>Consultas</strong></a>
   </logo>
@@ -27,11 +27,11 @@
 </mdb-navbar>
 <!-- Main -->
 <main>
-  <div class="container-fluid mt-5">
+  <div class="container mt-1">
 
     <div class="row">
         <div class="col-md-12">
-                <router-outlet></router-outlet>
+            <router-outlet></router-outlet>
         </div>
     </div>
     <!--Section: Features v.3-->
