--- a/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
+++ b/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
@@ -10,30 +10,20 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
 
       <mat-form-field>
         <input [formControl]="autoCompleteControl" type="text" placeholder="Còdigo" aria-label="Number" matInput
           [matAutocomplete]="auto">
         <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-          <mat-option *ngFor="let item of githubAutoComplete$ | async; let index = index" [value]="item.word">
-            {{ item.word | titlecase}}
+          <mat-option *ngFor="let item of githubAutoComplete$ | async; let index = index" [value]="item.nom">
+            {{ item.nom | titlecase}}
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
 
     </div>
-    <div class="col-md-3">
-     <!--  <mat-form-field class="example-full-width">
-        <input type="text" placeholder="Descripciòn" aria-label="text" matInput [formControl]="myControl"
-          [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-            {{option}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field> -->
-    </div>
+   
     <div class="col-md-3">
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Porcentaje %" type="number" value="0">
