--- a/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
+++ b/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
@@ -32,7 +32,7 @@
 
   </div>
   <div class="row">
-    <div class="example-container mat-elevation-z8">
+    <div class="mat-elevation-z8 responsive_table">
       <!--   <div class="example-loading-shade"
                *ngIf="isLoadingResults || isRateLimitReached">
             <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
@@ -41,7 +41,22 @@
             </div>
           </div> -->
 
-      <mat-table #table [dataSource]="dataSource" class="example-table" matSort matSortDisableClear matSortDirection="asc">
+      <mat-table #table [dataSource]="dataSource" matSort matSortDisableClear matSortDirection="asc">
+
+          <ng-container matColumnDef="select">
+              <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                              [checked]="selection.hasValue() && isAllSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
+              </th>
+              <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()"
+                              (change)="$event ? selection.toggle(row) : null"
+                              [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+              </td>
+            </ng-container>
 
         <ng-container matColumnDef="cod">
           <mat-header-cell *matHeaderCellDef>Codigo</mat-header-cell>
@@ -55,7 +70,7 @@
 
         <ng-container matColumnDef="ane">
           <mat-header-cell *matHeaderCellDef>Anestesia</mat-header-cell>
-          <mat-cell *matCellDef="let row">{{ row.ane }}</mat-cell>
+          <mat-cell *matCellDef="let row">{{ row.ane | currency }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="ayu">
