--- a/src/app/consultas/liquidacion-cx/liquidacion-cx.component.scss
+++ b/src/app/consultas/liquidacion-cx/liquidacion-cx.component.scss
@@ -5,3 +5,32 @@
   .mat-column-nom {
     flex: 0 0 30%;
   }
+
+  .mat-elevation-z8 {
+    width: 100%;
+  }
+
+  
+@media(max-width: 600px) {
+  // Custom header label that shows in each column, with a set width and bold font
+  .mobile-label {
+    width: 80px;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  // Remove the header row altogether
+  .mat-header-row {
+    display: none;
+  }
+
+  // The row cells should display as a column, justified left, with a bit of extra padding
+  .mat-row { 
+    flex-direction: column;
+    align-items: start;
+    padding: 8px 24px;
+  }
+  .responsive_table {
+    overflow-x: auto !important;
+}
+}
