--- a/src/app/consultas/liquidacion-cx/liquidacion-cx.component.scss
+++ b/src/app/consultas/liquidacion-cx/liquidacion-cx.component.scss
@@ -2,6 +2,10 @@
     width: 100%;
   }
 
+  .example-container {
+    height: 400px;
+    overflow: auto;
+  }
   .mat-column-nom {
     flex: 0 0 30%;
   }
