--- a/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
+++ b/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
@@ -26,7 +26,8 @@
 
     <div class="col-md-3">
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Porcentaje %" type="number" value="0">
+        <input matInput placeholder="Porcentaje %" [(ngModel)]="model" type="number" value="0" 
+        (blur)="onBlurMethod(model)">
       </mat-form-field>
     </div>
 
@@ -51,7 +52,7 @@
                 </mat-checkbox>
               </th>
               <td mat-cell *matCellDef="let row">
-                <mat-checkbox (click)="$event.stopPropagation()"
+                <mat-checkbox (click)="$event.stopPropagation();"
                               (change)="$event ? selection.toggle(row) : null"
                               [checked]="selection.isSelected(row)">
                 </mat-checkbox>
@@ -100,7 +101,7 @@
 
         <ng-container matColumnDef="tot">
           <mat-header-cell *matHeaderCellDef>Valor</mat-header-cell>
-          <mat-cell *matCellDef="let row">{{ row.tot }}</mat-cell>
+          <mat-cell *matCellDef="let row">{{ row.tot  | currency }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="uvr">
           <mat-header-cell *matHeaderCellDef>UVR</mat-header-cell>
