--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,10 @@
           </li>
           <li class="nav-item waves-light" mdbRippleRadius>
               <a [routerLink]="['consultas/LiquidacionCx']" class="nav-link">LiquidacionCx</a>
-          </li>     
+          </li>   
+          <li class="nav-item waves-light" mdbRippleRadius>
+            <a [routerLink]="['consultas/LiquidacionCIE']" class="nav-link">Liquidacion CIE</a>
+        </li>     
       </ul>
       <ul class="navbar-nav nav-flex-icons">
           <li class="nav-item waves-light" mdbRippleRadius>
