--- a/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
+++ b/src/app/consultas/liquidacion-cx/liquidacion-cx.component.html
@@ -18,7 +18,7 @@
     <div class="col-md-3">
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Porcentaje %" [(ngModel)]="model" type="number" value="0" 
-        (blur)="onBlurMethod(model)">
+        (blur)="onBlurMethod()">
       </mat-form-field>
     </div>
 
