--- a/src/app/consultas/liquidacion-cie/liquidacion-cie.component.html
+++ b/src/app/consultas/liquidacion-cie/liquidacion-cie.component.html
@@ -1,10 +1,9 @@
 <div class="col-md-12">
   <div class="row">
     
-    <div class="col-md-12">
-
+    <div class="col-md-11">
       <mat-form-field class="example-full-width">
-        <input [formControl]="autoCompleteControl" type="text" placeholder="Còdigo" aria-label="Number" matInput
+        <input [formControl]="autoCompleteControl" type="text" placeholder="Ingrese el Còdigo o Descripciòn" aria-label="Number" matInput
           [matAutocomplete]="auto">
         <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
           <mat-option *ngFor="let item of _serviceAutocomplete$ | async" [value]="item.name" (onSelectionChange)="selectionChange(item)">
@@ -14,10 +13,11 @@
       </mat-form-field>
 
     </div>
+    <div class="col-md-1 mt-2">           
+      <mat-icon (click)="openDialog()">help</mat-icon>        
+    </div>
 
-    
   </div>
-
 
   <div class="row">
     <div class="mat-elevation-z8 responsive_table example-container">
