cambios en calculos y modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
           <!-- <li class="nav-item active waves-light" mdbRippleRadius>
               <a class="nav-link" href="https://xhygnusnews.com/">Home <span class="sr-only">(current)</span></a>
           </li> -->
-         <!--  <li class="nav-item waves-light" mdbRippleRadius>
-              <a [routerLink]="['consultas/LiquidacionCx']" class="nav-link">LiquidacionCx</a>
-          </li>   --> 
+         <li class="nav-item waves-light" mdbRippleRadius>
+              <a [routerLink]="['consultas/LiquidacionCx']" class="nav-link">ISS2001</a>
+          </li>
           <li class="nav-item waves-light" mdbRippleRadius>
             <a [routerLink]="['consultas/LiquidacionCIE']" class="nav-link">CIE10</a>
         </li>     
