--- a/src/app/consultas/liquidacion-cie/dialog/dialog-content-CIE.html
+++ b/src/app/consultas/liquidacion-cie/dialog/dialog-content-CIE.html
@@ -40,5 +40,6 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial >Ver mas</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial 
+  onClick="window.open('https://xhygnusnews.com/blog/2018/12/16/cie_10/')">Ver mas</button>
 </mat-dialog-actions>
