ajuste de tabs, y table responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<!--The content below is only a placeholder and can be replaced.  scrolling-navbar, fixed-top  -->
+<!--The content below is only a placeholder and can be replaced.  scrolling-navbar, fixed-top 
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark bg-blue primary-color" [containerInside]="true">
-  <!-- <logo>
+  <logo>
       <a class="logo navbar-brand" href="#"><strong>Consultas</strong></a>
-  </logo> -->
+  </logo> 
   <links>
       <ul class="navbar-nav mr-auto">
-          <!-- <li class="nav-item active waves-light" mdbRippleRadius>
+         <li class="nav-item active waves-light" mdbRippleRadius>
               <a class="nav-link" href="https://xhygnusnews.com/">Home <span class="sr-only">(current)</span></a>
-          </li> -->
+          </li> 
          <li class="nav-item waves-light" mdbRippleRadius>
               <a [routerLink]="['consultas/LiquidacionCx']" class="nav-link">ISS2001</a>
           </li>
@@ -15,7 +15,7 @@
             <a [routerLink]="['consultas/LiquidacionCIE']" class="nav-link">CIE10</a>
         </li>     
       </ul>
-     <!--  <ul class="navbar-nav nav-flex-icons">
+    <ul class="navbar-nav nav-flex-icons">
           <li class="nav-item waves-light" mdbRippleRadius>
               <a class="nav-link"><i class="fa fa-facebook"></i></a>
           </li>
@@ -25,22 +25,19 @@
           <li class="nav-item waves-light" mdbRippleRadius>
               <a class="nav-link"><i class="fa fa-instagram"></i></a>
           </li>
-      </ul> -->
+      </ul> 
   </links>
-</mdb-navbar>
+</mdb-navbar>--> 
+<nav mat-tab-nav-bar>    
+    <a mat-tab-link routerLinkActive #activeCIE="routerLinkActive" [active]="activeCIE.isActive"  [routerLink]="['consultas/LiquidacionCIE']">CIE10</a>
+    <a mat-tab-link  routerLinkActive #activeISS="routerLinkActive" [active]="activeISS.isActive"  [routerLink]="['consultas/LiquidacionCx']">ISS2001</a>
+  </nav>
 <!-- Main -->
 <main>
   <div class=" mt-1">
-        <div class="col-md-12">
-            <router-outlet></router-outlet>
-        </div>
-    <!--Section: Features v.3-->
-    <!-- <section class="section feature-box pt-5">   
-        <br>
-                 
-     
-    </section> -->
-    <!--Section: Features v.3-->
+    <div class="col-md-12">
+        <router-outlet></router-outlet>
+    </div>
   </div>
 </main>
 <!--Main Navigation-->
