--- a/src/app/consultas/liquidacion-cie/liquidacion-cie.component.html
+++ b/src/app/consultas/liquidacion-cie/liquidacion-cie.component.html
@@ -2,8 +2,10 @@
   <div class="row">
 
     <div class="col-md-11">
-
+        <h3>Consulta de códigos CIE10 ("Clasificación Internacional de Enfermedades")</h3>
       <mat-form-field class="example-full-width">
+          
+
         <input [formControl]="autoCompleteControl" type="text" placeholder="Ingrese el Código o Descripción" aria-label="Number"
           matInput [matAutocomplete]="auto">
         <button mat-button *ngIf="autoCompleteControl.value" matSuffix mat-icon-button aria-label="Clear" (click)="autoCompleteControl.setValue(null,{emitEvent: false})">
